breadcrumb 1px overlap fix

--- a/user-dashboard-war/src/main/webapp/styles/main.css
+++ b/user-dashboard-war/src/main/webapp/styles/main.css
@@ -28,7 +28,7 @@ h4    { color: #363636; font-size: 10px; font-weight: bold; text-transform: uppe
 .jqstooltip { border: 0 none !important; display: block !important; padding: 0 !important; }
 .jqsfield { display: inline-block; line-height: 13px; padding: 4px 5px 5px; }
 
-.dropdown-menu { border: 1px solid #DCDCDC; margin: 0; left:auto; right:0; margin:-2px -1px 0 0; border-top:none; box-shadow:none; }
+.dropdown-menu { border: 1px solid #DCDCDC; margin: 0; left:auto; right:0; margin:-1px -1px 0 0; border-top:none; box-shadow:none; }
 .dropdown-menu li a { color: #177eb7; text-align:right; font-size:11px;}
 
 /*Custom global styles - */
